syntax = "proto3";
package layoutinspector.snapshots;
option java_package = "layoutinspector.snapshots";
option java_multiple_files = true;

import "compose_layout_inspection.proto";
import "view_layout_inspection.proto";

// Metadata for the snapshot. Hopefully we will be able to recover this even if loading the
// snapshot itself fails, so we can log something useful.
message Metadata {
   uint32 api_level = 1;
   string process_name = 2;
   bool contains_compose = 3;
   bool live_during_capture = 4;

   enum Source {
     UNKNOWN = 0;
     STUDIO = 1;
   }

   Source source = 5;
   string source_version = 6;
   uint32 dpi = 7;
   float font_scale = 8;
   uint32 screen_width = 9;
   uint32 screen_height = 10;
}

message Snapshot {
   layoutinspector.view.inspection.CaptureSnapshotResponse view_snapshot = 1;

   message ComposeInfo {
     int64 view_id = 1;
     layoutinspector.compose.inspection.GetComposablesResponse composables = 2;
     layoutinspector.compose.inspection.GetAllParametersResponse compose_parameters = 3;
   }
   repeated ComposeInfo compose_info = 2;

   layoutinspector.view.inspection.FoldEvent fold_info = 3;
}
